--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,35 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
-
+  <div class="header">
+    <h1>Keian Barton</h1>
+    <h2>Graduate Software Engineer</h2>
+  </div>
+  <div class="tagline">
+    <h3>About Me</h3>
+    <p>I'm a Graduate Software Engineer with a high first-class degree in Mathematics
+      and 1 year’s experience in the data analytics industry.</p>
+  </div>
+  <div class="skills">
+    <h3>Skills</h3>
+    <p>I have experience with the following technologies:</p>
+    <ul>SQL</ul>
+    <ul>Java</ul>
+    <ul>HTML</ul>
+    <ul>CSS</ul>
+    <ul>MATLAB</ul>
+    <ul>R</ul>
+  </div>
+  <div class="contact">
+    <h3>Contact me</h3>
+    <p>You can contact me at
+      <a href="mailto:keianbarton@hotmail.co.uk"
+      target="_top">
+      keianbarton@hotmail.co.uk</a>
+      or on my
+      <a href=https://www.linkedin.com/in/keianbarton/>
+      LinkedIn page
+      </a>
+    </p>
 </body>
 </html>
