--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
       keianbarton@hotmail.co.uk</a>
       or on my
       <a href=https://www.linkedin.com/in/keianbarton/>
-      LinkedIn page
+      LinkedIn page.
       </a>
     </p>
 </body>
