--- a/src/index.html
+++ b/src/index.html
@@ -13,18 +13,20 @@
   </div>
   <div class="tagline">
     <h3>About Me</h3>
-    <p>I'm a Graduate Software Engineer with a high first-class degree in Mathematics
-      and 1 year’s experience in the data analytics industry.</p>
+    <p>I'm a Graduate Software Engineer with a high first-class degree in
+      Mathematics (88% avg) and 1 year’s experience in the data analytics industry.</p>
   </div>
   <div class="skills">
     <h3>Skills</h3>
     <p>I have experience with the following technologies:</p>
-    <ul>SQL</ul>
-    <ul>Java</ul>
-    <ul>HTML</ul>
-    <ul>CSS</ul>
-    <ul>MATLAB</ul>
-    <ul>R</ul>
+    <ul>
+      <li>SQL</li>
+      <li>Java</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>MATLAB</li>
+      <li>R</li>
+    </ul>
   </div>
   <div class="contact">
     <h3>Contact me</h3>
@@ -34,8 +36,7 @@
       keianbarton@hotmail.co.uk</a>
       or on my
       <a href=https://www.linkedin.com/in/keianbarton/>
-      LinkedIn page.
-      </a>
+      LinkedIn profile</a>.
     </p>
 </body>
 </html>
