--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,12 @@
   <div class="tagline">
     <h3>About Me</h3>
     <p>I'm a Graduate Software Engineer with a high first-class degree in
-      Mathematics (88% avg) and 1 year’s experience in the data analytics industry.</p>
+      Mathematics and 1 year’s experience in the data analytics industry</p>
   </div>
   <div class="skills">
     <h3>Skills</h3>
-    <p>I have experience with the following technologies:</p>
+    <p>I love learning new coding languages and technologies! I have experience
+      with the following</p>
     <ul>
       <li>SQL</li>
       <li>Java</li>
@@ -30,13 +31,13 @@
   </div>
   <div class="contact">
     <h3>Contact me</h3>
-    <p>You can contact me at
+    <p>Feel free to drop me a mail at
       <a href="mailto:keianbarton@hotmail.co.uk"
       target="_top">
       keianbarton@hotmail.co.uk</a>
-      or on my
+      or a message on my
       <a href=https://www.linkedin.com/in/keianbarton/>
-      LinkedIn profile</a>.
+      LinkedIn profile</a>
     </p>
 </body>
 </html>
