--- a/src/index.html
+++ b/src/index.html
@@ -8,36 +8,47 @@
 </head>
 <body>
   <div class="header">
-    <h1>Keian Barton</h1>
-    <h2>Graduate Software Engineer</h2>
+    <table>
+      <tbody>
+        <td>
+          <h1>Keian Barton</h1>
+          <h2>Graduate Software Engineer</h2>
+        </td>
+        <td>
+          <img src = "images/KeianProfile.jpg" alt="Keian Barton's Profile Picture">
+        </td>
+      </tbody>
+    </table>
   </div>
-  <div class="tagline">
-    <h3>About Me</h3>
-    <p>I'm a Graduate Software Engineer with a high first-class degree in
-      Mathematics and 1 year’s experience in the data analytics industry</p>
-  </div>
-  <div class="skills">
-    <h3>Skills</h3>
-    <p>I love learning new coding languages and technologies! I have experience
-      with the following</p>
-    <ul>
-      <li>SQL</li>
-      <li>Java</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>MATLAB</li>
-      <li>R</li>
-    </ul>
-  </div>
-  <div class="contact">
-    <h3>Contact me</h3>
-    <p>Feel free to drop me a mail at
-      <a href="mailto:keianbarton@hotmail.co.uk"
-      target="_top">
-      keianbarton@hotmail.co.uk</a>
-      or a message on my
-      <a href=https://www.linkedin.com/in/keianbarton/>
-      LinkedIn profile</a>
-    </p>
+  <main>
+    <div class="tagline">
+      <h3>About Me</h3>
+      <p>I'm a Graduate Software Engineer with a high first-class degree in
+        Mathematics and 1 year’s experience in the data analytics industry</p>
+    </div>
+    <div class="skills">
+      <h3>Skills</h3>
+      <p>I love learning new coding languages and technologies! I have experience
+        with the following</p>
+      <ul>
+        <li>SQL</li>
+        <li>Java</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>MATLAB</li>
+        <li>R</li>
+      </ul>
+    </div>
+    <div class="contact">
+      <h3>Contact me</h3>
+      <p>Feel free to drop me a mail at
+        <a href="mailto:keianbarton@hotmail.co.uk"
+        target="_top">
+        keianbarton@hotmail.co.uk</a>
+        or a message on my
+        <a href=https://www.linkedin.com/in/keianbarton/>
+        LinkedIn profilse</a>
+      </p>
+    </main>
 </body>
 </html>
