--- a/src/index.html
+++ b/src/index.html
@@ -7,48 +7,82 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-  <div class="header">
-    <table>
-      <tbody>
-        <td>
-          <h1>Keian Barton</h1>
-          <h2>Graduate Software Engineer</h2>
-        </td>
-        <td>
-          <img src = "images/KeianProfile.jpg" alt="Keian Barton's Profile Picture">
-        </td>
-      </tbody>
-    </table>
+  <div class="wrapper">
+    <header>
+      <table>
+        <tbody>
+          <td>
+            <h1>Keian Barton</h1>
+            <h2>Graduate Software Engineer</h2>
+          </td>
+          <td>
+            <img src = "images/KeianProfile.jpg" alt="Keian Barton's Profile Picture">
+          </td>
+        </tbody>
+      </table>
+    </header>
+    <ul>
+      <li>
+        <div style="flex: auto;" class="summary">
+          <div class="tagline">
+            <h3>About Me</h3>
+            <p>I'm a Graduate Software Engineer with a high first-class degree in
+              Mathematics and 1 year’s experience in the data analytics industry</p>
+          </div>
+          <div class="skills">
+            <h3>Skills</h3>
+            <p>I love learning new coding languages and technologies! I have experience
+              with the following</p>
+            <ul>
+              <li>SQL</li>
+              <li>Java</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>R</li>
+              <li>MATLAB</li>
+            </ul>
+          </div>
+          <div class="contact">
+            <h3>Contact me</h3>
+            <p>Feel free to drop me a mail at
+              <a href="mailto:keianbarton@hotmail.co.uk"
+              target="_top">
+              keianbarton@hotmail.co.uk</a>
+              or a message on my
+              <a href=https://www.linkedin.com/in/keianbarton/>
+              LinkedIn profile</a>
+            </p>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div style="flex: auto;" class="badges">
+          <h3>Code School Badges</h3>
+        </div>
+      </li>
+    </ul>
+      <div style="flex: auto;" class="questions">
+      <h3>Questions</h3>
+      <ol>
+        <li>Please describe briefly two or three in-depth pieces of programming
+          work you have undertaken</li>
+        <p>Answer 1</p>
+        <li>Do you do have any additional development, server set-up / management,
+          hosting or other cloud projects that you have worked on from home?</li>
+        <p>Answer 2</p>
+        <li>Do you have any open-source contributions you can talk about or share
+          URLs for?</li>
+        <p>Answer 3</p>
+        <li>Can you briefly detail your experience in the following technologies
+          if any: Python, Bash, Linux, Xen (or other virtualization tools), CouchDB,
+          TCP/IP Networks / Routing</li>
+        <p>Answer 4</p>
+        <li>Is there anything in the cloud / development world that you are
+          particularly interested in, and what have you done to learn more about
+          this?</li>
+        <p>Answer 5</p>
+      </ol>
+    </div>
   </div>
-  <main>
-    <div class="tagline">
-      <h3>About Me</h3>
-      <p>I'm a Graduate Software Engineer with a high first-class degree in
-        Mathematics and 1 year’s experience in the data analytics industry</p>
-    </div>
-    <div class="skills">
-      <h3>Skills</h3>
-      <p>I love learning new coding languages and technologies! I have experience
-        with the following</p>
-      <ul>
-        <li>SQL</li>
-        <li>Java</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>MATLAB</li>
-        <li>R</li>
-      </ul>
-    </div>
-    <div class="contact">
-      <h3>Contact me</h3>
-      <p>Feel free to drop me a mail at
-        <a href="mailto:keianbarton@hotmail.co.uk"
-        target="_top">
-        keianbarton@hotmail.co.uk</a>
-        or a message on my
-        <a href=https://www.linkedin.com/in/keianbarton/>
-        LinkedIn profilse</a>
-      </p>
-    </main>
 </body>
 </html>
