--- a/src/index.html
+++ b/src/index.html
@@ -56,8 +56,8 @@
         </div>
       </li>
       <li>
-        <div style="flex: auto;" class="badges">
-          <h3>Code School Badges</h3>
+        <div style="flex: auto;" class="training">
+          <h3>Training</h3>
         </div>
       </li>
     </ul>
